overflow solved

--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,6 @@ body {
   padding: 5em 0 2em;
   text-align: center;
   height: 100%;
-  overflow-y: hidden;
 }
 
 h1 {
